fixes width of paper-cards on small devices

--- a/lesson3/bigForm1/polymer/src/css/styles.css
+++ b/lesson3/bigForm1/polymer/src/css/styles.css
@@ -3,13 +3,8 @@ body {
 	font-family: 'Roboto', 'Noto', sans-serif;
 }
 
-paper-toolbar {
-/*	position: fixed;
-	width: 100%;*/
-}
-
 .main {
-	width: 400px;
+	max-width: 400px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 16px;
